--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,22 @@
-title: My personal blog - Adam Neilson
-email: your-email@domain.com
+title: My blog
+email: victoriamawson12@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  My new blog
 permalink: ':title/'
-baseurl: "/adam-blog" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://vjmawson.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author settings
-author: Adam Neilson # add your name
-author-pic: adam-face.jpg
-about-author: My name is Adam Neilson. I’m a full-time adventure travel blogger and photographer who’s been exploring the world for over 2 years.
+author: Victoria Mawson # add your name
+#author-pic: victoriamawsonpic.jpeg
+#about-author: 
 
 # Contact links
 email: # Add your Email address
-phone: # Add your Phone number
 website: # Add your website, do not add http://
 linkedin: # Add your Linkedin handle
-github: artemsheludko # Add your Github handle
-twitter: '@artemsheludko_' # Add your Twitter handle
-facebook: # Add your Facebook handle
+github: Vmawson # Add your Github handle
+twitter: '@victoriajmawson' # Add your Twitter handle
 instagram: # Add your Instagram handle
 pinterest: # Add your Pinterest handle
 
