--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ email: victoriamawson12@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   My new blog
 permalink: ':title/'
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://vjmawson.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/VJMawson" # the subpath of your site, e.g. /blog
+url: "https://vmawson.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author settings
 author: Victoria Mawson # add your name
